@@ -1,12 +1,19 @@
 Changes with Apache 2.1.7
   [Remove entries to the current 2.0 section below, when backported]
 
+  *) SECURITY: CAN-2005-2088
+     proxy: Correctly handle the Transfer-Encoding and Content-Length
+     headers, discard the request Content-Length whenever T-E: chunked
+     is used, always passing one of either C-L or T-E: chunked whenever 
+     the request includes a request body, and no longer upgrade HTTP/1.0 
+     requests to the origin server as HTTP/1.1.  Resolves an entire class
+     of proxy HTTP Request Splitting/Spoofing attacks.  [William Rowe]
+
   *) Added TraceEnable [on|off|extended] per-server directive to alter
      the behavior of the TRACE method.  This addresses a flaw in proxy
      conformance to RFC 2616 - previously the proxy server would accept
      a TRACE request body although the RFC prohibited it.  The default
-     remains 'TraceEnable on'.
-     [William Rowe]
+     remains 'TraceEnable on'.  [William Rowe]
 
   *) Add additional SSLSessionCache option, 'nonenotnull', which is
      similar to 'none' (disabling any external shared cache) but forces
